p1/configmap-transcoding-envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: transcoding-envoy-config
  namespace: transcoding
data:
  envoy.yaml: |
    admin:
       profile_path: /tmp/envoy.prof
       address:
          socket_address:
            address: 127.0.0.1
            port_value: 10001
    static_resources:
      listeners:
      - name: http-listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                 - name: envoy.filters.http.router
                   typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                    - match:
                        prefix: "/"
                      route:
                         cluster: transcoding_service
                         timeout: 0s
      clusters:
      - name: transcoding_service
        connect_timeout: 20s
        type: strict_dns
        lb_policy: round_robin
        circuit_breakers:
          thresholds:
           - max_connections: 1
             # max_pending_requests: 100
             # max_retries: 3
        load_assignment:
          cluster_name: transcoding_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080
