p1/deployements.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcoding
  namespace: encoding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transcoding
  template:
    metadata:
      labels:
        app: transcoding
    spec:
      containers:
      - name: transcoding
        image: cloudmedialab/x264-fn-events:1.0
        env:
          - name: SERVICE_PORT
            value: "80"
          - name: SERVICE_PATH
            value: "/x264-fn-events"
          - name: EVENT_CONSUMER_URL
            value: ""
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-nginx
  namespace: encoding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-nginx
  template:
    metadata:
      labels:
        app: upload-nginx
    spec:
      containers:
      - name: upload
        image: cloudmedialab/upload-tomcat-service:2.0
        volumeMounts:
          - name: video-transcoded
            mountPath: /app/upload 
        env:
          - name: SERVICE_PORT
            value: "8080"
          - name: BASE_URL
            value: "/upload"
        ports:
        - containerPort: 8080
      - name: nginx
        image: nginx:1.14.2-alpine
        volumeMounts:
          - name: video-transcoded
            mountPath: /usr/share/nginx/html
          - name: configmap-nginx
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
          - name: configmap-nginx
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
        ports:
        - containerPort: 80
      volumes:
        - name: video-transcoded
          emptyDir: {}
        - name: configmap-nginx
          configMap:
            name: nginx-indexed
